# ChangeLog for media-libs/libfishsound
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libfishsound/ChangeLog,v 1.8 2010/03/08 06:35:48 sping Exp $

  08 Mar 2010; Sebastian Pipping <sping@gentoo.org>
  libfishsound-0.9.1.ebuild, libfishsound-0.9.2.ebuild:
  Fix SRC_URI and HOMEPAGE (bug #294672)

*libfishsound-0.9.2 (04 Nov 2009)

  04 Nov 2009; Alexis Ballier <aballier@gentoo.org>
  +libfishsound-0.9.2.ebuild:
  version bump

  14 Sep 2009; Markus Meier <maekke@gentoo.org> libfishsound-0.9.1.ebuild:
  amd64/x86 stable, bug #284380

  08 Apr 2008; Alexis Ballier <aballier@gentoo.org>
  -files/libfishsound-0.9.0-ocert-2008-2.patch, -libfishsound-0.8.1.ebuild,
  -libfishsound-0.9.0.ebuild:
  remove old

*libfishsound-0.9.1 (07 Apr 2008)

  07 Apr 2008; Alexis Ballier <aballier@gentoo.org>
  +libfishsound-0.9.1.ebuild:
  version bump

*libfishsound-0.9.0 (06 Apr 2008)

  06 Apr 2008; Alexis Ballier <aballier@gentoo.org>
  +files/libfishsound-0.9.0-ocert-2008-2.patch, +libfishsound-0.9.0.ebuild:
  version bump with a patch for bug #216499

  04 Jan 2008; Stefan Briesenick <sbriesen@gentoo.org>
  libfishsound-0.8.1.ebuild:
  added ~x86 keyword

*libfishsound-0.8.1 (18 Nov 2007)

  18 Nov 2007; Alexis Ballier <aballier@gentoo.org> +metadata.xml,
  +libfishsound-0.8.1.ebuild:
  initial import
