@@ -1,6 +1,13 @@
 # ChangeLog for media-libs/libfishsound
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libfishsound/ChangeLog,v 1.8 2010/03/08 06:35:48 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libfishsound/ChangeLog,v 1.9 2010/03/11 10:56:57 ssuominen Exp $
+
+*libfishsound-1.0.0 (11 Mar 2010)
+
+  11 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
+  +libfishsound-1.0.0.ebuild:
+  Version bump. Use pregenerated docs and install to correct path wrt
+  #294276.
 
   08 Mar 2010; Sebastian Pipping <sping@gentoo.org>
   libfishsound-0.9.1.ebuild, libfishsound-0.9.2.ebuild:
